ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserFuzz1/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserFuzz1/input.ts:1:9
  |
1 | cla <ss {
  |         ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserFuzz1/input.ts:1:1
  |
1 | cla <ss {
  | ^^^^^^^

